# TaskSanitizer

./: .gitignore  LICENSE.txt  README.md  build_and_create_gcov.sh  evaluation.py  flowsan  install.sh  install_evaluation.sh  runtests.sh  tasksan
.github/workflows/: C_Integration.yml
src/benchmarks/: BackgroundExample.cc  Banking.cc  Fibonacci.cc  MapReduce.cc  PointerChasing.cc  RacyBackgroundExample.cc  RacyBanking.cc  RacyFibonacci.cc  RacyMapReduce.cc  RacyPointerChasing.cc  sectionslock1-orig-no.cc  taskdep1-orig-no.cc  taskdep2-orig-no.cc  taskdep3-orig-no.cc  taskdependmissing-orig-yes.cc
src/benchmarks/mapreduceinputs/: _100k.txt  _150k.txt  _200k.txt  _250k.txt  _300k.txt  _350k.txt  _400k.txt
src/common/: CriticalSignatures.h  MemoryActions.h  action.h  defs.h  instruction.h
src/detector/: CMakeLists.txt  checker.cc  checker.cpp  checker.h  conflict.h  conflictReport.h  duplicateManager.h  instruction.h  main.cpp  operationSet.h  report.h  sigManager.h  validator.cpp  validator.h
src/detector/commutativity/: CommutativityChecker.cc  CommutativityChecker.h  CriticalSectionBody.h  CriticalSections.h
src/detector/determinacy/: checker.cc  checker.h  conflict.h  operationSet.h  report.h
src/detector/nondeterminism/: checker.cc  checker.h  conflict.h  operationSet.h  report.h
src/functionengine/: CallStack.h  FunctionEngine.h
src/instrumentor/: CMakeLists.txt  install.sh
src/instrumentor/callbacks/: Callbacks.h  InstrumentationCallbacks.cc  InstrumentationCallbacks.h  MemoryCallbacks.cc  OMPTCallbacks.h  tsan_interface.h
src/instrumentor/eventlogger/: CMakeLists.txt  Callbacks.h  Logger.cc  Logger.h  MemoryCallbacks.cc  OMPTCallbacks.h  TaskInfo.h  Util.h
src/instrumentor/pass/: CMakeLists.txt  DebugInfoHelper.h  IIRlogger.h  LLVMLibs.h  TaskSanitizer.cc  Util.h
src/runtime/: CMakeLists.txt  Callbacks.h  Excludes.h  IIRlogger.h  Libs.h  Logger.cpp  Logger.h  MemoryActions.h  MemoryCallbacks.cc  OMPTCallbacks.h  TaskInfo.h  Util.h  action.h  defs.h  install.sh  tsan_interface.cc  tsan_interface.h
src/tests/: atomic.cc  bank_task_racy.cc  critical.cc  flush.cc  forloop.cc  master.cc  parallel.cc  sections.cc  serial_counters.cc  single.cc
src/tests/benchmarks/: BackgroundExample.cc  Banking.cc  Fibonacci.cc  MapReduce.cc  PointerChasing.cc  bank_task_racy.cc  fibonacci.cc  pointer_chasing.cc  sectionslock1-orig-no.cc  taskdep1-orig-no.cc  taskdep3-orig-no.cc  taskdependmissing-orig-yes.cc
src/tsan/: CMakeLists.txt  DebugInfoHelper.h  Excludes.h  FlowSanitizer.cpp  IIRlogger.h  Libs.h  TaskSanitizer.cc  TaskSanitizer.cpp  Util.h
src/unittests/: CMakeLists.txt  Common_Defs_gtest.cc  CommutativityUnittests.cc  atomic.cc  critical.cc  flush.cc  forloop.cc  master.cc  parallel.cc  sections.cc  serial_counters.cc  single.cc
test/: CMakeLists.txt  Common_Defs_gtest.cc  Common_Instruction_gtest.cc  CriticalSignatures_gtest.cc  MemoryActions_gtest.cc
